force-app/main/default/objects/Api_Marketing__c/Api_Marketing__c.object-meta.xml
<CustomObject>
    <description>Schema for Api_Marketing</description>
    <label>Api_Marketing</label>
    <nameField>
        <label>emp_name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Api_Marketings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>