force-app/main/default/objects/Api_Marketing__c/fields/bank_account_no__c.field-meta.xml
<CustomField>
    <fullName>bank_account_no__c</fullName>
    <label>bank_account_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>