force-app/main/default/objects/Api_Marketing__c/fields/domicile_subdistrict_code__c.field-meta.xml
<CustomField>
    <fullName>domicile_subdistrict_code__c</fullName>
    <label>domicile_subdistrict_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>