force-app/main/default/objects/Api_Marketing__c/fields/dt_join__c.field-meta.xml
<CustomField>
    <fullName>dt_join__c</fullName>
    <label>dt_join</label>
    <length>255</length>
    <type>Text</type>
</CustomField>