force-app/main/default/objects/Api_Marketing__c/fields/emmp_status__c.field-meta.xml
<CustomField>
    <fullName>emmp_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>emmp_status</label>
    <type>Checkbox</type>
</CustomField>