force-app/main/default/objects/Api_Marketing__c/fields/emp_no__c.field-meta.xml
<CustomField>
    <fullName>emp_no__c</fullName>
    <label>emp_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>