force-app/main/default/objects/Api_Marketing__c/fields/id_number__c.field-meta.xml
<CustomField>
    <fullName>id_number__c</fullName>
    <label>id_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>