force-app/main/default/objects/Api_Marketing__c/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <label>industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>