force-app/main/default/objects/Api_Marketing__c/fields/marketing_id__c.field-meta.xml
<CustomField>
    <fullName>marketing_id__c</fullName>
    <description>untuk mengisi marketing id</description>
    <label>marketing_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>