force-app/main/default/objects/Api_Marketing__c/fields/nik_marketing__c.field-meta.xml
<CustomField>
    <fullName>nik_marketing__c</fullName>
    <label>nik_marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>