force-app/main/default/objects/Api_Marketing__c/fields/occupation__c.field-meta.xml
<CustomField>
    <fullName>occupation__c</fullName>
    <label>occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>