force-app/main/default/objects/Api_Marketing__c/fields/office_location_region_id__c.field-meta.xml
<CustomField>
    <fullName>office_location_region_id__c</fullName>
    <label>office_location_region_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>