force-app/main/default/objects/Api_Marketing__c/fields/pos_id__c.field-meta.xml
<CustomField>
    <fullName>pos_id__c</fullName>
    <label>pos_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>