force-app/main/default/objects/Api_Marketing__c/fields/position_code__c.field-meta.xml
<CustomField>
    <fullName>position_code__c</fullName>
    <label>position_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>