force-app/main/default/objects/Api_Marketing__c/fields/product_tag_items__c.field-meta.xml
<CustomField>
    <fullName>product_tag_items__c</fullName>
    <label>product_tag_items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>