force-app/main/default/objects/Api_Marketing__c/fields/product_tag_type__c.field-meta.xml
<CustomField>
    <fullName>product_tag_type__c</fullName>
    <label>product_tag_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>