force-app/main/default/objects/Api_Marketing__c/fields/religion_code__c.field-meta.xml
<CustomField>
    <fullName>religion_code__c</fullName>
    <label>religion_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>