force-app/main/default/objects/Api_Marketing__c/fields/remark__c.field-meta.xml
<CustomField>
    <fullName>remark__c</fullName>
    <label>remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>