force-app/main/default/objects/Api_Marketing__c/fields/sub_branch_id__c.field-meta.xml
<CustomField>
    <fullName>sub_branch_id__c</fullName>
    <label>sub_branch_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>