force-app/main/default/objects/Api_Marketing__c/fields/sub_district_code__c.field-meta.xml
<CustomField>
    <fullName>sub_district_code__c</fullName>
    <label>sub_district_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>