force-app/main/default/objects/Api_Marketing__c/fields/superior_marketing_id__c.field-meta.xml
<CustomField>
    <fullName>superior_marketing_id__c</fullName>
    <label>superior_marketing_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>