force-app/main/default/objects/Api_Marketing__c/fields/tax_name__c.field-meta.xml
<CustomField>
    <fullName>tax_name__c</fullName>
    <label>tax_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>