force-app/main/default/objects/Api_Marketing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>product_tag_type__c</columns>
    <columns>product_tag_items__c</columns>
    <columns>bank_branch__c</columns>
    <columns>emmp_status__c</columns>
    <columns>domicile_zip_code__c</columns>
    <columns>occupation__c</columns>
    <columns>mobile_phone_no__c</columns>
    <columns>domicile_province_code__c</columns>
    <columns>zip_code__c</columns>
    <columns>last_maintained_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>